<resources>
    <string name="app_name">Book Store</string>

    <!-- Supplier list -->
    <string name="supplier_name0">UNKNOWN</string>
    <string name="supplier_name1">AMAZON</string>
    <string name="supplier_name2">OVERSTOCK</string>
    <string name="supplier_name3">EBAY</string>

    <!-- activity_catalog -->
    <string name="empty_view_text">Get started by adding a product :)</string>
    <string name="action_delete_all_products">Delete All Products</string>
    <string name="delete_all_dialog">Delete All these Products ?</string>

    <!-- activity_editor -->
    <string name="add_product">Add New Product</string>
    <string name="product_editor">Product Editor</string>
    <string name="edit_product">Edit Product</string>

    <string name="unsaved_changes_dialog_msg">Discard your order and quit?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!-- activity_view -->
    <string name="product_view">Product view Details</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="quantity_change_msg">Quantity was change</string>

    <!-- activity_view and activity_editor-->
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_price_currency">U.S.</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone_number">Enter phone number</string>


    <string name="action_save">Save</string>
    <string name="empty_list">Save</string>

    <string name="insert_failed">Error with saving product</string>
    <string name="insert_successful">Product saved successfully</string>

    <string name="update_failed">Error with updating product</string>
    <string name="update_successful">Product updated successfully</string>


    <string name="deleted_all_products_message">row(s) deleted from product table</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error with deleting Product</string>


    <string name="action_delete_all_entries">delete all entries</string>
    <string name="action_insert_dummy_data">insert dummy data</string>
    <string name="action_delete">delete</string>
    <string name="delete_button">Delete</string>
    <string name="book_quantity">Book is currently out of stock</string>
    <string name="empty_view_title_text">Looks like nothing is in your cart</string>
    <string name="empty_view_subtitle_text">Please select a book to purchase</string>
    <string name="edit_activity_title_new_item">Add a book</string>
    <string name="editor_activity_edit_item">Edit item</string>
    <string name="quantity_finish_msg">Finished changing quantity</string>
    <string name="sale">Buy</string>
    <string name="edit">Edit</string>
    <string name="unknown_book">book is unknown</string>
    <string name="example_book_name">Python The No-Nonsense Guide</string>
    <string name="example_supplier_name">CyberPunk University</string>
    <string name="example_phone_number">123 555 6789</string>
    <string name="dollar_sign">$</string>
    <string name="neg_quantity_error">No negative values</string>
    <string name="phone_number">Phone Number</string>
    <string name="minus_sign">-</string>
    <string name="addition_sign">+</string>
    <string name="book_quantity_increased_by_one">book quantity increased</string>
    <string name="book_title_required">A book title is required!</string>
    <string name="book_price_required">Book price is required</string>
    <string name="quantity_required">Book quantity is required</string>
    <string name="supplier_required">Supplier name required</string>
    <string name="phone_number_required">Phone number required</string>
    <string name="max_quantity">Max quantity is 100 books</string>
    <string name="state_quantity_increase">Before increasing please state quantity</string>
    <string name="state_quantity_decrease">Before decreasing please state quantity</string>
    <string name="no_negative_selection">Must have at least one book</string>
    <item name="view_supplier_name" type="id">view supplier name</item>
</resources>
