<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/product_editor"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />


        <!-- Input fields -->
        <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">

            <TextView
                style="@style/ProductAddTextStyle"
                android:text="@string/product_name"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

            <EditText
                android:id="@+id/edit_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>
            </RelativeLayout>
        </LinearLayout>

    <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">

        <TextView
            style="@style/ProductAddTextStyle"
            android:text="@string/product_price"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <EditText
            android:id="@+id/edit_price"
            android:text="@string/dollar_sign"
            android:inputType="number"
            style="@style/EditorFieldStyle" />

        <TextView
            style="@style/CurrencyStyle"
            android:text="@string/product_price_currency"/>
    </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">

        <TextView
            style="@style/ProductAddTextStyle"
            android:text="@string/product_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/decrease_Button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/minus_sign" />


            <EditText
                android:id="@+id/quantity_view_text"
                style="@style/ListItemText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <Button
                android:id="@+id/increase_Button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:focusable="false"
                android:text="@string/addition_sign" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">

        <TextView
            style="@style/ProductAddTextStyle"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:text="@string/product_supplier_name" />

        <Spinner
            android:id="@+id/supplier_spinner"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:entries="@array/array_supplier_names"
            android:paddingRight="8dp"
            android:spinnerMode="dropdown"
            android:textColor="#1236d6" />

        </LinearLayout>

    <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">

        <TextView
            style="@style/ProductAddTextStyle"
            android:text="@string/product_supplier_phone_number"/>

        <ImageButton
            android:id="@+id/phone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phone_number"
            android:src="@drawable/ic_action_phone_start" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <EditText
                android:id="@+id/edit_phone_number"
                android:inputType="phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/example_phone_number"
                tools:ignore="Autofill" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>